--- a/_includes/head-custom-google-analytics.html
+++ b/_includes/head-custom-google-analytics.html
@@ -14,11 +14,11 @@
         "noErrors.js",
         "noUndefined.js",
       ]
-    }
+    } 
   });
 </script>
-<script type="text/javascript" async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
+<script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 </script>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QJKG79DQMG"></script>
