--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,10 @@
 
           <li><a href="{% post_url 2023-09-25-QC-Course-Intro %}">Quantum Computing Course</a></li>
 
+          <li><a href="https://charliethomas.substack.com/">Substack</a></li>
+
+          <li><a href="https://www.youtube.com/@charlesthomas1487">YouTube</a></li>
+
           <li><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></li>
 
         </ul>
